Fix spacing in money displays

--- a/microservices/app/imports/client/pages/AppPromotionLotPage/AppPromotionLotPage.scss
+++ b/microservices/app/imports/client/pages/AppPromotionLotPage/AppPromotionLotPage.scss
@@ -1,4 +1,4 @@
-.app-promotion-option-page {
+.app-promotion-lot-page {
   display: flex;
   flex-direction: column;
 
